--- a/requirements.txt
+++ b/requirements.txt
@@ -3,21 +3,27 @@ anyio==4.3.0
 asttokens==2.4.1
 certifi==2024.2.2
 charset-normalizer==3.3.2
-decorator==5.1.1
-elevenlabs==1.2.1
+decorator==4.4.2
+elevenlabs==0.2.27
 exceptiongroup==1.2.1
 executing==2.0.1
+ftfy==6.2.0
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
 idna==3.7
+imageio==2.34.1
+imageio-ffmpeg==0.4.9
 ipython==8.18.1
 jedi==0.19.1
 matplotlib-inline==0.1.7
+moviepy==1.0.3
 numpy==1.26.4
 opencv-python==4.9.0.80
 parso==0.8.4
 pexpect==4.9.0
+pillow==10.3.0
+proglog==0.1.10
 prompt-toolkit==3.0.43
 ptyprocess==0.7.0
 pure-eval==0.2.2
@@ -30,6 +36,7 @@ requests==2.31.0
 six==1.16.0
 sniffio==1.3.1
 stack-data==0.6.3
+tqdm==4.66.2
 traitlets==5.14.3
 typing_extensions==4.11.0
 urllib3==2.2.1
