updated gitignore and one requirement

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,18 @@
 frame_0.jpg
 frame.jpg
 narration/
+env.py
+annotated_frame0.jpg
+annotated_frame1.jpg
+annotated_frame2.jpg
+annotated_frame3.jpg
+audio0.wav
+audio1.wav
+audio2.wav
+audio3.wav
+frame0.jpg
+frame1.jpg
+frame2.jpg
+frame3.jpg
+story.mp4
+__pycache__
